// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test GifGrid should show component 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    pep
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Test GifGrid should show item when load useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  />
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  >
    <GifGridItem
      id={1}
      key="1"
      title="abababa"
      url="https://localhost/cbcbcb"
    />
  </div>
</Fragment>
`;
